--- a/projeto 01/index.html
+++ b/projeto 01/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-
+    <div id="principal">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Quem sou</a></li>
+                </ul>
+            </nav>
+            <div>
+                <h1>Curso web Fundamentos</h1>
+                <p>Aprenda HTML, CSS e Javascript</p>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
