--- a/projeto 01/index.html
+++ b/projeto 01/index.html
@@ -24,6 +24,39 @@
                 <p>Aprenda HTML, CSS e Javascript</p>
             </div>
         </header>
+
+        <main>
+            <section>
+                <div class="card">
+                    <img src="" alt="">
+                    <p>Seletor</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p>Posicionamento</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <p>Fontes</p>
+                </div>
+
+            </section>
+
+            <section>
+                <article>
+                    <header>
+                        <h2>Titulo do article</h2>
+                    </header>
+                    <p>Paragrafo 1</p>
+                    <p>Paragrafo 2</p>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <p>
+                Copyright &copy; 2020
+            </p>
+        </footer>
     </div>
 </body>
 
