footer of page complete

--- a/projeto 01/index.html
+++ b/projeto 01/index.html
@@ -7,11 +7,14 @@
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
     <meta name="keywords" content="devs, html">
+
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div id="principal">
-        <header>
+        <header class="hero">
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
@@ -19,30 +22,30 @@
                     <li><a href="#">Quem sou</a></li>
                 </ul>
             </nav>
-            <div>
+            <div class="hero-content">
                 <h1>Curso web Fundamentos</h1>
                 <p>Aprenda HTML, CSS e Javascript</p>
             </div>
         </header>
 
         <main>
-            <section>
+            <section class="content-section">
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="img/card_01.png" alt="">
                     <p>Seletor</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="img/card_02.jpg" alt="">
                     <p>Posicionamento</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="img/card_03.jpg" alt="">
                     <p>Fontes</p>
                 </div>
 
             </section>
 
-            <section>
+            <section class="content-section">
                 <article>
                     <header>
                         <h2>Titulo do article</h2>
@@ -53,7 +56,7 @@
             </section>
         </main>
         <footer>
-            <p>
+            <p class="footer-content">
                 Copyright &copy; 2020
             </p>
         </footer>
