--- a/projeto 01/index.html
+++ b/projeto 01/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Pagina de exemplo estrutura basica</title>
+    <title>Projeto 1</title>
     <meta charset="utf-8">
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
@@ -30,15 +30,15 @@
 
         <main>
             <section class="content-section">
-                <div class="card">
+                <div class="card card-1">
                     <img src="img/card_01.png" alt="">
                     <p>Seletor</p>
                 </div>
-                <div class="card">
+                <div class="card card-2">
                     <img src="img/card_02.jpg" alt="">
                     <p>Posicionamento</p>
                 </div>
-                <div class="card">
+                <div class="card card-3">
                     <img src="img/card_03.jpg" alt="">
                     <p>Fontes</p>
                 </div>
