project one finished

--- a/projeto 01/index.html
+++ b/projeto 01/index.html
@@ -49,8 +49,8 @@
                     <header>
                         <h2>Titulo do article</h2>
                     </header>
-                    <p>Paragrafo 1</p>
-                    <p>Paragrafo 2</p>
+                    <p class="paragrafo">Paragrafo 1</p>
+                    <p class="paragrafo">Paragrafo 2</p>
                 </article>
             </section>
         </main>
