--- a/projeto 02/index.html
+++ b/projeto 02/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Pagina de exemplo estrutura basica</title>
+    <title>Projeto 02</title>
     <meta charset="utf-8">
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
@@ -14,6 +14,7 @@
 <body>
     <div class="content">
         <header class="content-header">
+            <img src="./img/logo.png" alt="Logo">
             <nav class="content-nav">
                 <ul>
                     <li><a href="#">Portifolio</a></li>
@@ -22,6 +23,63 @@
                 </ul>
             </nav>
         </header>
+        <img src="./img/topo.jpg" alt="foto de mulher vestida">
+        <article class="portifolio">
+            <h1>New Fashion Everything Never Enough</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris volutpat nisi non ante dictum congue.
+                Cras id odio gravida, posuere velit sed, lacinia mi. Cum sociis natoque penatibus et magnis dis
+                parturient montes, nascetur ridiculus mus. Sed vehicula, ipsum vel congue cursus, mi neque tincidunt
+                enim, egestas porttitor felis neque et risus. Maecenas fringilla hendrerit enim malesuada laoreet.
+                Aenean quis tortor a odio tempus tincidunt. Vivamus rutrum nulla sed metus congue bibendum. Sed ut
+                aliquam purus. Donec odio mauris, commodo sed dignissim vitae, dapibus eget mauris.</p>
+
+        </article>
+        <section class="gallary">
+            <article class="cards">
+                <img src="./img/modelo1.jpg" alt="modelo 01">
+                <p class="cards-p-title">Vest Romasa</p>
+                <p class="cards-p-content">Strong &amp; charismatic</p>
+            </article>
+            <article class="cards">
+                <img src="./img/modelo2.jpg" alt="modelo 02">
+                <p class="cards-p-title">Jacket Fima</p>
+                <p class="cards-p-content">Strong Sersonality</p>
+            </article>
+            <article class="cards">
+                <img src="./img/modelo3.jpg" alt="modelo 03">
+                <p class="cards-p-title">Jacket Black Kira</p>
+                <p class="cards-p-content">Power Fascinating</p>
+            </article>
+        </section>
+
+        <article class="about">
+            <h2>Everything Never Enough <br>Just Fashion</h2>
+            <p>
+                Praesent placerat eros eget lacus ullamcorper, id dapibus ante vestibulum. Curabitur quis condimentum
+                diam. Duis aliquet erat vel laoreet tincidunt. Pellentesque vitae varius ligula. Phasellus in nibh
+                tempus, gravida justo et, suscipit felis. Cras ornare arcu ac sodales tincidunt. Mauris vehicula erat
+                vel ligula porttitor imperdiet. Curabitur nec magna urna. Sed porta ex ex, at pulvinar nibh aliquet
+                quis. Integer dapibus congue vestibulum. Phasellus bibendum lobortis quam, nec sollicitudin nisl
+                volutpat at.</p>
+        </article>
+
+        <div id="contact">
+            <address>Call me now for design
+                012-1234-4567
+            </address>
+
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.0399895031014!2d-42.74302868541686!3d-5.0972369963005875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e30793f3ecee7%3A0x437cb25f8f33104f!2sQ.%2058%20Cj%20Renascenca%20II%2C%2033%20-%20Renascen%C3%A7a%2C%20Teresina%20-%20PI%2C%2064082-592!5e0!3m2!1spt-BR!2sbr!4v1593568703494!5m2!1spt-BR!2sbr"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+            </div>
+        </div>
+
+        <footer>
+            Copyright &comp; fastfashion.com
+        </footer>
     </div>
 </body>
 
