--- a/projeto 02/index.html
+++ b/projeto 02/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="content">
         <header class="content-header">
-            <img src="./img/logo.png" alt="Logo">
+            <img class="logo-tipo" src="./img/logo.png" alt="Logo">
             <nav class="content-nav">
                 <ul>
                     <li><a href="#">Portifolio</a></li>
@@ -65,19 +65,19 @@
         </article>
 
         <div id="contact">
-            <address>Call me now for design
+            <address>Call me now for design<br>
                 012-1234-4567
             </address>
-
-            <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.0399895031014!2d-42.74302868541686!3d-5.0972369963005875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e30793f3ecee7%3A0x437cb25f8f33104f!2sQ.%2058%20Cj%20Renascenca%20II%2C%2033%20-%20Renascen%C3%A7a%2C%20Teresina%20-%20PI%2C%2064082-592!5e0!3m2!1spt-BR!2sbr!4v1593568703494!5m2!1spt-BR!2sbr"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
-            </div>
         </div>
 
-        <footer>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.0399895031014!2d-42.74302868541686!3d-5.0972369963005875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e30793f3ecee7%3A0x437cb25f8f33104f!2sQ.%2058%20Cj%20Renascenca%20II%2C%2033%20-%20Renascen%C3%A7a%2C%20Teresina%20-%20PI%2C%2064082-592!5e0!3m2!1spt-BR!2sbr!4v1593568703494!5m2!1spt-BR!2sbr"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+        </div>
+
+        <footer class="footer-content">
             Copyright &comp; fastfashion.com
         </footer>
     </div>
