nav bar creating

--- a/exercicio-01/index.html
+++ b/exercicio-01/index.html
@@ -13,196 +13,16 @@
 
 <body>
     <div class="content">
-        <div class="container-fundo">
-            <header class="content-header">
-                <nav class="content-nav">
-                    <ul class="list-nav-bar">
-                        <li><a>Inicio</a></li>
-                        <li><a>Sobre</a></li>
-                        <li><a>Contanto</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quos ab, quo magni nesciunt eius ipsa
-            blanditiis nam dolorem accusamus eligendi. Consequuntur aliquid enim aspernatur dicta consectetur expedita
-            nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
-        nihil delectus.</p>
+        <header class="content-header">
+            <img class="image-content-logo" src="img/logo.jpg" alt="Foto de uma motanha a noite">
+            <nav class="content-nav">
+                <ul class="list-nav-bar">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contanto</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
 </body>
 
