--- a/exercicio-02/index.html
+++ b/exercicio-02/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Pagina de exemplo estrutura basica</title>
+    <title>Exercicio 02</title>
     <meta charset="utf-8">
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+    <div class="content">
 
+    </div>
 </body>
 
 </html>
