--- a/exercicio-02/index.html
+++ b/exercicio-02/index.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="container">
+        <header class="hearder-content">
 
+            <img class="img-nav" src="img/logo.png" alt="Logo">
+
+            <nav class="nav-bar">
+
+            </nav>
+        </header>
     </div>
 </body>
 
