--- a/exercicio-02/index.html
+++ b/exercicio-02/index.html
@@ -14,12 +14,18 @@
     <div class="container">
         <header class="hearder-content">
 
-            <img class="img-nav" src="img/logo.png" alt="Logo">
+            <!-- <img class="img-nav" src="img/logo.png" alt="Logo"> -->
 
             <nav class="nav-bar">
-
+                <ul class="nav-ul">
+                    <li><a href="index.html">Pagina inicial</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contatos</a></li>
+                </ul>
             </nav>
         </header>
+
+
     </div>
 </body>
 
