styler CSS of nav bar complety

--- a/exercicio-02/index.html
+++ b/exercicio-02/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header class="hearder-content">
 
-            <!-- <img class="img-nav" src="img/logo.png" alt="Logo"> -->
+            <img class="img-nav" src="img/logo.png" alt="Logo">
 
             <nav class="nav-bar">
                 <ul class="nav-ul">
