End edit of project EXERCICIO-2

--- a/exercicio-02/index.html
+++ b/exercicio-02/index.html
@@ -24,67 +24,101 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <article class="content">
+                <h1 class="content-titulo">Lorem Ipsum</h1>
+                <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                </h3>
+                <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at gravida turpis,
+                    at
+                    vulputate mi. Orci
+                    varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ut
+                    scelerisque
+                    velit. Pellentesque pulvinar interdum turpis ac egestas. Praesent massa sapien, fringilla eget orci
+                    ut,
+                    commodo congue risus. Aenean vel auctor elit. Suspendisse a pellentesque enim, eget tempor ligula.
+                    Curabitur vitae arcu erat. Sed accumsan urna pellentesque convallis consequat. Class aptent taciti
+                    sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec aliquet aliquet
+                    posuere.
+                    Nunc ultrices malesuada nunc ac luctus.
+                </p>
+                <p class="paragrafo">
+                    Donec eget consequat augue, rutrum fermentum lectus. Integer tincidunt, felis in ultricies
+                    scelerisque,
+                    nulla nisi feugiat lectus, eget scelerisque tortor dolor eget purus. Proin sollicitudin justo eu
+                    lectus
+                    posuere tempus. Vivamus eu mollis neque. Nam sed augue erat. Cras efficitur lectus et augue varius,
+                    id
+                    elementum ipsum aliquet. Pellentesque dapibus id purus et ornare. Curabitur volutpat consectetur
+                    ante
+                    eget tincidunt. Donec eros lacus, elementum eget dolor id, mattis accumsan sem. Proin imperdiet nisl
+                    luctus nisl laoreet hendrerit. Nunc aliquam non nisi vel porttitor.
 
-        <article class="content">
-            <h1 class="content-titulo">Lorem Ipsum</h1>
-            <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
-            <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at gravida turpis, at
-                vulputate mi. Orci
-                varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ut scelerisque
-                velit. Pellentesque pulvinar interdum turpis ac egestas. Praesent massa sapien, fringilla eget orci ut,
-                commodo congue risus. Aenean vel auctor elit. Suspendisse a pellentesque enim, eget tempor ligula.
-                Curabitur vitae arcu erat. Sed accumsan urna pellentesque convallis consequat. Class aptent taciti
-                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec aliquet aliquet posuere.
-                Nunc ultrices malesuada nunc ac luctus.
+                </p>
+                <p class="paragrafo">
+                    Cras eget lectus mattis, elementum purus eu, semper nisi. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Maecenas et lorem sit amet lacus tincidunt faucibus quis eget elit. Quisque dictum
+                    sed
+                    augue ac sodales. Mauris dui tellus, finibus eget porta in, maximus eget magna. Praesent et
+                    consectetur
+                    nisl. Aenean a leo pellentesque, tincidunt quam eget, tincidunt sapien. Integer nec urna et eros
+                    facilisis efficitur id eget eros. Suspendisse potenti. Maecenas euismod dolor in ullamcorper
+                    porttitor.
+                    Nulla id arcu vitae justo tincidunt tristique. In et tortor viverra elit eleifend tempus. Aliquam
+                    aliquam dolor sit amet sapien laoreet placerat. Fusce tempus tempus lacinia. Curabitur eget tempor
+                    libero.
+                </p>
+                <p class="paragrafo">
+                    Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
+                    venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut
+                    velit.
+                    Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
+                    tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
+                    aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut
+                    augue.
+                    Donec id est risus. Sed dapibus at felis vitae auctor.
+                    Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
+                    venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut
+                    velit.
+                    Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
+                    tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
+                    aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut
+                    augue.
+                    Donec id est risus. Sed dapibus at felis vitae auctor.
+                    Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
+                    venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut
+                    velit.
+                    Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
+                    tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
+                    aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut
+                    augue.
+                    Donec id est risus. Sed dapibus at felis vitae auctor.
+                    Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
+                    venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut
+                    velit.
+                    Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
+                    tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
+                    aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut
+                    augue.
+                    Donec id est risus. Sed dapibus at felis vitae auctor.
+                </p>
+                <p class="paragrafo">
+                    Duis interdum libero eu ligula iaculis consectetur. Vivamus interdum tristique erat, at aliquet dui
+                    vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod velit
+                    non
+                    tellus tristique, ut aliquet velit viverra. Nam facilisis malesuada nunc, luctus maximus lorem
+                    cursus
+                    non. Curabitur eget augue odio. Duis augue arcu, eleifend sed arcu et, pretium consectetur augue. Ut
+                    mollis ut enim ut egestas.</p>
+            </article>
 
-                Donec eget consequat augue, rutrum fermentum lectus. Integer tincidunt, felis in ultricies scelerisque,
-                nulla nisi feugiat lectus, eget scelerisque tortor dolor eget purus. Proin sollicitudin justo eu lectus
-                posuere tempus. Vivamus eu mollis neque. Nam sed augue erat. Cras efficitur lectus et augue varius, id
-                elementum ipsum aliquet. Pellentesque dapibus id purus et ornare. Curabitur volutpat consectetur ante
-                eget tincidunt. Donec eros lacus, elementum eget dolor id, mattis accumsan sem. Proin imperdiet nisl
-                luctus nisl laoreet hendrerit. Nunc aliquam non nisi vel porttitor.
 
-                Cras eget lectus mattis, elementum purus eu, semper nisi. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Maecenas et lorem sit amet lacus tincidunt faucibus quis eget elit. Quisque dictum sed
-                augue ac sodales. Mauris dui tellus, finibus eget porta in, maximus eget magna. Praesent et consectetur
-                nisl. Aenean a leo pellentesque, tincidunt quam eget, tincidunt sapien. Integer nec urna et eros
-                facilisis efficitur id eget eros. Suspendisse potenti. Maecenas euismod dolor in ullamcorper porttitor.
-                Nulla id arcu vitae justo tincidunt tristique. In et tortor viverra elit eleifend tempus. Aliquam
-                aliquam dolor sit amet sapien laoreet placerat. Fusce tempus tempus lacinia. Curabitur eget tempor
-                libero.
 
-                Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
-                venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut velit.
-                Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
-                tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
-                aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut augue.
-                Donec id est risus. Sed dapibus at felis vitae auctor.
-                Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
-                venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut velit.
-                Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
-                tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
-                aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut augue.
-                Donec id est risus. Sed dapibus at felis vitae auctor.
-                Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
-                venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut velit.
-                Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
-                tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
-                aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut augue.
-                Donec id est risus. Sed dapibus at felis vitae auctor.
-                Vestibulum euismod laoreet malesuada. Morbi consectetur justo at sapien lacinia placerat. Fusce
-                venenatis, felis quis venenatis posuere, turpis nisl sagittis massa, ut porttitor turpis neque ut velit.
-                Aliquam tortor nulla, volutpat placerat euismod vel, volutpat sed lectus. Morbi non mi accumsan,
-                tristique sem vitae, porta sem. Nulla volutpat ornare consequat. Nulla hendrerit orci feugiat tellus
-                aliquet, eu sagittis urna sodales. Phasellus magna risus, vehicula vitae maximus eget, egestas ut augue.
-                Donec id est risus. Sed dapibus at felis vitae auctor.
+        </main>
 
-                Duis interdum libero eu ligula iaculis consectetur. Vivamus interdum tristique erat, at aliquet dui
-                vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod velit non
-                tellus tristique, ut aliquet velit viverra. Nam facilisis malesuada nunc, luctus maximus lorem cursus
-                non. Curabitur eget augue odio. Duis augue arcu, eleifend sed arcu et, pretium consectetur augue. Ut
-                mollis ut enim ut egestas.</p>
-        </article>
-
+        <footer class="rodape">
+            <p>Criado por <span>F. JAIR</span></p>
+        </footer>
     </div>
 </body>
 
