uploud picture in project

--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -7,11 +7,28 @@
     <meta name="author" content="jair">
     <meta name="description" content="Lista de documentos">
     <meta name="keywords" content="devs, html">
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div class="container">
+        <header class="cabecalho">
+            <nav class="barra-navegacao">
+                <img class="image-logo" src="img/logo.png" alt="Logo de empresa de carro">
+                <ul class="menu">
+                    <li class="opcoe">Inicio</li>
+                    <li class="opcoe">Contatos</li>
+                    <li class="opcoe">Sobre</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
 
+        </main>
+        <footer class="rodape">
+
+        </footer>
     </div>
 </body>
 
