--- a/exercicio-03/index.html
+++ b/exercicio-03/index.html
@@ -24,10 +24,33 @@
             </nav>
         </header>
         <main>
+            <article class="artigo">
+                <img class="img-texto" src="img/carro01.jpg">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida vestibulum turpis, et aliquet
+                    nisl malesuada ut. Aliquam erat volutpat. Pellentesque metus arcu, pharetra sollicitudin eros
+                    sodales, sollicitudin malesuada sem. Integer mattis nulla ut diam lobortis, ut vestibulum justo
+                    consectetur. Praesent augue lectus, tempus vel dapibus sed, dictum sit amet mi. Duis vestibulum,
+                    quam at porttitor blandit, tortor mi interdum purus, vel pharetra justo erat a augue. Mauris gravida
+                    at enim nec sollicitudin. Nullam ac mi nisl. Orci varius natoque penatibus et magnis dis parturient
+                    montes, nascetur ridiculus mus. In hendrerit vitae arcu a dignissim. Pellentesque dictum ullamcorper
+                    sem, at scelerisque enim vestibulum sit amet. Curabitur in pellentesque nulla. Quisque ut ex tempus,
+                    feugiat ante a, ultricies velit.</p>
 
+                <p>Pellentesque non ligula et libero dictum scelerisque non eu neque. Vivamus scelerisque elit mi, id
+                    sollicitudin nibh vestibulum in. Ut nec fermentum mi. Nullam facilisis massa vitae pharetra laoreet.
+                    Mauris ut nisl in neque tincidunt cursus. Vestibulum ac lacinia dui. Phasellus sem eros, hendrerit
+                    in ante at, mattis tristique dui. Nam eu mi risus. Donec et mi ut mi eleifend elementum et non
+                    lacus. Cras tristique vitae lacus ut efficitur. Duis semper urna blandit luctus consectetur.</p>
+            </article>
+
+            <section class="content-main">
+                <!-- Sera tre ou seis cards com foto de carro -->
+                <article class="card"></article>
+            </section>
         </main>
         <footer class="rodape">
-
+            <!-- Colocar img e um texto -->
         </footer>
     </div>
 </body>
